# journal-dapp-sol

./: .gitignore  README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/journal-dapp/: Cargo.toml
anchor/programs/journal-dapp/src/: lib.rs  tests.rs
anchor/programs/vault/src/: lib.rs
app/: layout.tsx  page.tsx
app/components/: journal-card.tsx
