[package]
name = "journal_dapp"
version = "0.1.0"
description = "A simple SOL CRUD contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "journal_dapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# To get rid of the warnings
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
